feat: Chinese landmark names, warp rename, and bulk market listing
- allow CJK warp names and add /warp rename <old> <new> for admins
- let /market sell list more than one stack, pulling identical items
  (same components/NBT) from the backpack when the held stack is short
- match restock items by full components and add
  /market restock <id> [count]
- suggest only the player's own listings for restock/cancel and show
  the order id in the market GUI
- extend Chinese name support to /home, /sethome, /delhome, /renamehome
  with CJK-friendly tab completion
- update README for the new commands and naming rules